# PocketMem

./: .gitignore  OnDevice-RAG-Agent-教学文档.md  PocketMemory-教学文档.md  README.md  check_env.py  main.py  pyproject.toml
agent/: access_guard.py  generator.py  graph.py  hooks.py  memory_judge.py  retriever_node.py  router.py  state.py  user_profile.py
android/: build.gradle.kts  settings.gradle.kts
api/: cache.py  models.py  server.py
backend/: __init__.py  base.py  dual_backend.py  local_simulate.py  mobile_backend.py  vllm_backend.py
config/: settings.py
data/: training_data.json  training_data_real_en.json  training_data_test.json  training_data_train.json  training_data_val.json
data/demo/: 张三.txt  (+4 more)
data_ingestion/: __init__.py  chunker.py  indexer.py  mail_parser.py  markdown_loader.py  pdf_loader.py  pipeline.py  source_manager.py  time_utils.py  txt_parser.py  wechat_decryptor.py  wechat_detector.py  wechat_importer.py  wechat_key.py  wechat_key_elevated.py  wechat_parser.py
docs/: interview-gap-solutions.md  memory-judge-analysis.md  memory-system-design.md  project-overhaul-plan.md  qlora-finetune-plan.md  功能扩展设计方案.md  图像规格说明.md  开发问题与优化方案.md
eval/: benchmark.py  test_queries.json
frontend/: index.html
rag/: __init__.py  bm25_retriever.py  embeddings.py  entity_aware_retriever.py  entity_extractor.py  hybrid_retriever.py  reranker.py  vector_store.py
scripts/: diag_wechat_key.py  download_models.py  download_models_modelscope.py  extract_full_enron.py  extract_real_datasets.py  fix_json.py  fix_json_v2.py  fix_json_v3.py  generate_training_data.py  ingest_demo_data.py  ingest_enterprise_data.py  merge_cn_batches.py  merge_training_data.py  run_benchmark.py  run_demo.py  setup_vllm.sh  train_qlora.py  translate_enron.py  tune_weights.py
tests/: mock_full_pipeline.py  test_backend.py  test_ingestion.py
utils/: __init__.py  logging.py
(+24 files in other folders)
