[project]
name = "pocketagenticrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "jieba>=0.42.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.2",
    "modelscope>=1.37.1",
    "numpy>=2.4.6",
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "sse-starlette>=3.4.4",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

# PyTorch GPU 版本索引（CUDA 12.4）
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
